--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,18 @@
-<div class="wrapper">
-    <div class="sidebar" data-background-color="white" data-active-color="danger">
-        <app-sidebar-cmp></app-sidebar-cmp>
-    </div>
-    <div class="main-panel">
-        <navbar-cmp></navbar-cmp>
-        <div class="content">
-            <router-outlet></router-outlet>
-        </div>
-        <footer-cmp></footer-cmp>
-    </div>
+<div class="wrapper" *ngIf="isLocalReq()">
+	<div class="sidebar" data-background-color="white"
+		data-active-color="danger">
+		<app-sidebar-cmp></app-sidebar-cmp>
+	</div>
+	<div class="main-panel">
+		<navbar-cmp></navbar-cmp>
+		<div class="content">
+			<router-outlet></router-outlet>
+		</div>
+		<footer-cmp></footer-cmp>
+	</div>
 </div>
-<fixedplugin-cmp></fixedplugin-cmp>
+<fixedplugin-cmp *ngIf="isLocalReq()"></fixedplugin-cmp>
+
+<div class="content" *ngIf="!isLocalReq()">
+	<router-outlet></router-outlet>
+</div>
