--- a/src/app/menuitem/menuitem.component.html
+++ b/src/app/menuitem/menuitem.component.html
@@ -1,3 +1,3 @@
-    <div class="container-fluid" >
+    <div class="container-fluid" ng-include="" >
       <iframe [src]="getMenuitemUrl()"  border= "0" width="1280" height="1024" ></iframe>        
     </div>
