--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="wrapper" *ngIf="isLocalReq()">
 	<div class="sidebar" data-background-color="white"
 		data-active-color="danger">
-		<app-sidebar-cmp></app-sidebar-cmp>
+		<app-sidenav></app-sidenav>
 	</div>
 	<div class="main-panel">
 		<navbar-cmp></navbar-cmp>
@@ -11,7 +11,7 @@
 		<footer-cmp></footer-cmp>
 	</div>
 </div>
-<fixedplugin-cmp *ngIf="isLocalReq()"></fixedplugin-cmp>
+ 
 
 <div class="content" *ngIf="!isLocalReq()">
 	<router-outlet></router-outlet>
